--- a/module2/css/style.css
+++ b/module2/css/style.css
@@ -1,1 +1,131 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
+body { 
+    font-family: sans-serif;
+  
+}
+
+h1 {
+    font-size: 200%;
+    height: 50px;
+    padding: 0;
+    text-align: center;
+}
+
+h2 {
+    font-size: 125%;
+    float: right;
+    position: relative;
+    padding: 2% 15% 2% 15%;
+    width: auto;
+    margin-top: -3.4%;
+    margin-right: -3.4%;
+    outline: 1px solid black;
+    
+}
+
+p {
+    clear: right;
+    padding: 1% 2% 0% 2%;
+}
+
+#beefbox, #chickenbox, #sushibox {
+    background-color: #a8a8a8;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 1%;
+    width: 29.33%;
+    float: left;
+    padding: 1% 1% 0% 1%;
+    outline: 1px solid black;
+}
+
+#chicken {
+    background-color: #f5b095;
+}
+
+#beef {
+    background-color: #ad2300;
+    color: white;
+}
+
+#sushi {
+    background-color: #faf7bb;
+}
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+	
+    #chickenbox {
+	width: 45%;
+    }
+    
+    #beefbox {
+        width: 45%;
+    }
+    
+    #sushibox {
+        width: 94%;
+        height: 150px auto;
+    }
+    
+    #chicken, #beef {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -2.3%;
+        margin-right: -2.2%;
+    }
+    
+    #sushi {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -1.1%;
+        margin-right: -1.1%;
+    
+    }
+	
+}
+
+@media (max-width: 767px) and (max-width: 991px) {
+	
+    #chickenbox {
+		width: auto;
+        margin-right: 6%;
+        margin-left:  6%;;
+    }
+    
+    #beefbox {
+        width: auto;
+        margin-top: 5%;
+        margin-right: 6%;
+        margin-left: 6%;
+    }
+    
+    #sushibox {
+        width: auto;
+        margin-top: 5%;
+        margin-right: 6%;
+        margin-left: 6%;
+    }
+    
+    #sushi, #chicken, #beef {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -1.2%;
+        margin-right: -1.2%;
+    }
+	
+}
 
